# mari

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md
.github/workflows/: build.yml  clang-format.yml  continuous-integration.yml
firmware/: AGENTS.md  Makefile
firmware/app/01mari_maclow/: main.c
firmware/app/03app_gateway_net/: main.c
firmware/app/03app_gateway_test/: main.c
firmware/app/03app_node/: main.c
firmware/mari/: mac.c  mari.c  mari.h  models.h  packet.c  packet.h
marilib/: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  install_marilib.sh  pyproject.toml  run_marilib.sh
marilib/.github/: pull_request_template.md
marilib/examples/: basic.py  frames.py  hs.py  mari_cloud.py  mari_cloud_minimal.py  mari_edge.py  mari_edge_minimal.py  mari_edge_stats.py  minimal.py  uart.py
marilib/examples/mqtt/: README.md  docker-compose.yml  mosquitto.conf
marilib/examples/raspberry-pi/: README.md  bind_interface.sh  run_marilib.sh  sense_hat_ui.py  setup_marilib_service.sh
marilib/mari_edge/: mari_edge.py  mari_protocol.py  model.py  serial_adapter.py  serial_hdlc.py  serial_uart.py  tui.py
marilib/marilib/: __init__.py  communication_adapter.py  latency.py  logger.py  mari_protocol.py  marilib.py  marilib_cloud.py  marilib_edge.py  metrics.py  model.py  pdr.py  serial_adapter.py  serial_hdlc.py  serial_uart.py  tui.py  tui_cloud.py  tui_edge.py
marilib/marilib/tests/: test_communication_adapter.py
marilib/mira_edge/: mira_edge.py  mira_protocol.py  model.py  protocol.py  serial_adapter.py  serial_hdlc.py  serial_interface.py  serial_uart.py  tui.py
marilib/raspberry_pi/: bind_interface.sh  run_marilib.sh
marilib/tests/: test_protocol.py
