[build-system]
requires = [
    "hatchling>=1.4.1",
]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "*.py"
]
exclude = [
]

[tool.hatch.version]
path = "mari_edge/__init__.py"

[project]
name = "mari_edge"
dynamic = ["version"]
authors = [
    { name="Geovane Fedrecheski", email="geovane.fedrecheski@inria.fr" },
]
dependencies = [
    "click          == 8.1.7",
    "pyserial       == 3.5",
    "rich           == 14.0.0",
    "structlog      == 24.4.0",
    "tqdm           == 4.66.5",
]
description = "MariEdge is a Python library for interacting with the Mari network."
readme = "README.md"
license = { text="BSD" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
"Homepage" = "https://github.com/DotBots/mari_edge"
"Bug Tracker" = "https://github.com/DotBots/mari_edge/issues"

[project.scripts]
mari_edge = "mari_edge.cli.main:main"

[tool.ruff]
lint.select = ["E", "F"]
line-length = 88
lint.ignore = ["E501", "E722"]

[tool.isort]
multi_line_output = 3  # Use Vertical Hanging Indent
profile = "black"

[tool.black]
line-length = 79
skip-string-normalization = true
